# Alienator

./: CMakeLists.txt  GameCharacter.h  MainMenu.cpp  MainMenu.h  README.md  main.cpp
Assets/: AssetsManager.cpp  AssetsManager.h
Behavior/EnemyBehavior/: EnemyBehavior.h  Guard.h  Sentinel.cpp  Sentinel.h  Wizard.h
Behavior/HeroBehavior/: Archer.cpp  Archer.h  Boxer.cpp  Boxer.h  HeroBehavior.cpp  HeroBehavior.h  Mage.cpp  Mage.h
Behavior/Strategy/: Attack.cpp  Attack.h  Movement.cpp  Movement.h  Patrolling.cpp  Patrolling.h
Behavior/Strategy/ConcreteStrategy/: CloseAttack.cpp  CloseAttack.h  DistanceAttack.cpp  DistanceAttack.h  FightingMovement.cpp  FightingMovement.h  GroundPatrolling.cpp  GroundPatrolling.h  PatrollingMovement.cpp  PatrollingMovement.h
Data/: achievementsFile.txt  heroFile.txt
Engine/: Achievements.cpp  Achievements.h  AchievementsEnum.h  Game.cpp  Game.h  Loader.cpp  Loader.h  Observer.h  ObserverGame.h  Subject.h  SubjectGame.h  Timer.cpp  Timer.h
GameCharacter/: Enemy.cpp  Enemy.h  EnemyTypeEnum.h  GameCharacter.cpp  GameCharacter.h  Hero.cpp  Hero.h
GameCharacter/EnemyBehavior/: EnemyBehavior.cpp  EnemyBehavior.h  Guard.cpp  Guard.h  Sentinel.cpp  Sentinel.h  Wizard.cpp  Wizard.h
Maps/: Map.cpp  Map.h  MapFactory.cpp  MapFactory.h  MapHandler.cpp  MapHandler.h
Maps/Files/: level1.txt  level2.txt  level4.txt
Menu/: MainMenu.cpp  MainMenu.h
Objects/: Block.cpp  Block.h  Collectable.cpp  Collectable.h  PowerUp.cpp  PowerUp.h  Tile.cpp  Tile.h  TileEnum.h
SFML-2.5.1/include/SFML/Graphics/: Transformable.hpp
SFML/doc/html/: doxygen.css
States/: GameState.cpp  GameState.h  LevelSelectState.cpp  LevelSelectState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  StateHandler.cpp  StateHandler.h
Strategy/: Attack.cpp  Attack.h  AttackBehavior.cpp  AttackBehavior.h  BehaviorEnum.h  PatrolBehavior.cpp  PatrolBehavior.h  Patrolling.cpp  Patrolling.h
Strategy/ConcreteStrategy/: CloseAttack.cpp  CloseAttack.h  DistanceAttack.cpp  DistanceAttack.h  GroundPatrolling.cpp  GroundPatrolling.h
Weapons/: Assault.cpp  Assault.h  Bullet.cpp  Bullet.h  Gun.cpp  Gun.h  Minigun.cpp  Minigun.h  Shotgun.cpp  Shotgun.h  Sniper.cpp  Sniper.h  Weapon.cpp  Weapon.h
test/: CMakeLists.txt  TestCollision.cpp  TestEnemyBehavior.cpp  TestHero.cpp  mainTests.cpp
